# puzzle15v2

./: CMakeLists.txt  README.md  build.sh  run.sh
include/: data_gen.h  keys.h  m_swap.h  print.h
lib/: data_gen.cpp  keys.cpp  m_swap.cpp  print.cpp
sources/: fifteen
src/: main.cpp
